platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_53.platter
start(){
    menu(x + 1){
    stop;
    }
}